# omxplayer

./: .gitignore  INSTALL  KeyConfig.cpp  KeyConfig.h  Keyboard.cpp  Keyboard.h  Makefile  Makefile.am  OMXControl.cpp  OMXControl.h  OMXCore.cpp  OMXPlayerSubtitles.cpp  README.md  configure.ac  deps.nix  omxplayer.cpp  shell.nix  version.h.in
